<resources>
    <string name="app_name">Fine Cause</string>
    <string name="account_type" translatable="false">iotDevice</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_more">More</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="boot_time">Boot Time</string>
    <string name="boot_time_today">Boot Time Today</string>
    <string name="operation_time_total">Operation time Total</string>
    <string name="output_productivity">Productivity</string>
    
    <!-- Home -->
    <string name="list_device_name">DeviceName</string>
    <string name="del_device_desc">Do you want to delete the device?</string>
    <string name="del_device_title">Delete device</string>
    <string name="del_device_fail">Delete device fail</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Enter device name</string>
    <string name="home_screen_title">OnBoard Device List</string>
    <string name="delete">DELETE</string>
    <string name="show_all">Show All Device</string>
    <string name="show_fc">Show FC Device</string>
    <string name="show_fa">Show FA Device</string>


    <!-- Edit Device -->
    <string name="edit_device_title">Edit Device</string>
    <string name="original_device_name_title">Original Name</string>
    <string name="edit_device_name_hint">Change Customized name</string>
    <string name="edit_device_name_btn">Confirm</string>
    <string name="edit_device_description">If you won\'t change it, keep blank</string>
    <string name="edit_device_success">Edit device success, back to home page</string>
    <string name="edit_device_fail">Edit device fail</string>

    <!-- Add Device -->
    <string name="add_device_title">Add Device</string>
    <string name="add_device_name">Name</string>
    <string name="add_device_name_hint">Enter Customized Name</string>
    <string name="add_device_code">Code</string>
    <string name="add_device_code_hint">Enter device code</string>
    <string name="add_device_password">Password</string>
    <string name="add_device_password_hint">Enter device password</string>
    <string name="add_device_add_btn">Add</string>
    <string name="add_device_success">A device success, back to home page</string>
    <string name="add_device_check_msg">Please fill whole the fields</string>
    <string name="add_device_duplicate">You have added the device</string>
    <string name="add_device_fail">Add device fail</string>

    <!-- Common -->
    <string name="network_error">Network Error, Please check your network connection</string>
    <string name="no_data_error">Don\'t have any data</string>
    <string name="loginin_field_not_completed">Please input user name and password</string>

    <string name="home_title">Home</string>
    <string name="hour_unit">hr(s)</string>
    <string name="minute_unit">min(s)</string>
    <string name="day_unit">th</string>
    <string name="productvity_unit" translatable="false">\u0020pcs</string>
    <string name="average_productvity_unit" translatable="false">\u0020pcs/min</string>

    <!-- Reset Password -->
    <string name="reset_title">Reset</string>
    <string name="reset_submit_btn">Submit</string>
    <string name="reset_word">Reset email have sent, Please check your mail box ( also check the spam box )</string>
    <string name="reset_password_remind">Please check the reset password mail after 5 minutes</string>

    <!-- Login -->
    <string name="login_title">Login</string>
    <string name="email">Email</string>
    <string name="email_hint">Enter Email</string>
    <string name="password">Password</string>
    <string name="password_hint">Enter Password</string>
    <string name="login_btn">LogIn</string>
    <string name="register_btn">Register</string>
    <string name="forgot_password_btn">Forgot Password</string>
    <string name="login_fail">Login Fail</string>


    <!-- Register -->
    <string name="register_title">Register</string>
    <string name="register_success">Register success</string>
    <string name="user_name">UserName</string>
    <string name="user_name_hint">Enter UserName</string>
    <string name="password_again_hint">Enter Password Again</string>
    <string name="submit_btn">Submit</string>
    <string name="password_not_match">Password not match</string>
    <string name="email_not_filled">Please check the email format</string>
    <string name="username_not_filled">Please fill the account</string>
    <string name="duplicate_account">Duplicate email or account, please change it</string>
    <string name="register_fail">Register fail</string>


    <!-- Bar Chart page -->
    <string name="chart_title">productivity information</string>
    <string name="hour_output_title">hour output</string>
    <string name="hour_output_description">hour output of day</string>
    <string name="day_output_title">day output</string>
    <string name="day_output_description">day ourput of month</string>
    <string name="operation_time_title">operation time</string>
    <string name="operation_time_description">operation time of month</string>
    <string name="average_output_title">average output</string>
    <string name="average_output_description">average output of month</string>

    <string name="total_of_day_title">Total productivity</string>
    <string name="maximum_productivity_of_day_title">Maximum productivity today</string>
    <string name="maximum_hour_of_day_title">Maximum productivity hour</string>
    <string name="current_productivity_of_day_title">Current productivity</string>

    <string name="total_of_month_title">Total productivity this month</string>
    <string name="maximum_productivity_of_month_title">Maximum productivity</string>
    <string name="maximum_day_of_month_title">Maximum productivity day</string>
    <string name="current_productivity_of_month_title">Current productivity</string>

    <string name="total_operation_time_of_month_title">Total operation hours</string>
    <string name="maximum_day_operation_time_of_month_title">Maximum operation hours day</string>
    <string name="maximum_operation_time_of_month_title">Maximum operation hours</string>

    <string name="current_operation_time_of_month_title">Current operation hours</string>

    <string name="maximum_operation_speed_of_month_title">Maximum operation speed</string>
    <string name="maximum_operation_speed_day_of_month_title">Maximum operate speed</string>
    <string name="current_operation_speed_of_month_title">Current operation speed</string>

    <string name="chart_list_title">Title</string>
    <string name="chart_list_description">description</string>

    <string name="no_date_str">No Data</string>

    <string name="day_chart_title">Productivity Output Of Today</string>
    <string name="month_chart_title">Productivity Output Of This Month</string>
    <string name="operation_chart_title">Operation Time Of This Month</string>
    <string name="average_output_chart_title">Average Productivity Output Of This Month</string>

    <!-- More page -->
    <string name="more_title">More</string>
    <string name="more_welcome">Hi</string>
    <string name="log_out">LogOut</string>
    <string name="version_name">Version %1$s</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="cancel">Cancel</string>

    <!-- Change Password Page -->
    <string name="change_password_title">Change Password</string>
    <string name="old_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="new_password_confirm">Confirm</string>
    <string name="new_password_confirm_hint">Again</string>
    <string name="change_success">Change Success</string>
    <string name="change_fail">Current password not match</string>
    <string name="confirm_delete_account">Aue your sure you want to delete?</string>



</resources>
