<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/my_search"
        android:title="@string/search_title"
        android:icon="@drawable/ic_baseline_search_24px"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item android:id="@+id/show_all"
        android:title="@string/show_all"
        app:showAsAction="never" />


    <item android:id="@+id/filter_fc"
        android:title="@string/show_fc"
        app:showAsAction="never" />

    <item android:id="@+id/filter_fa"
        android:title="@string/show_fa"
        app:showAsAction="never" />

</menu>