<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/work_background">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/add_device_name"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/deviceDisplayNameEditText"
        app:layout_constraintEnd_toStartOf="@+id/deviceDisplayNameEditText"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_device_code"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/deviceCodeEditText"
        app:layout_constraintStart_toStartOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_device_password"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/devicePasswordEditText"
        app:layout_constraintStart_toStartOf="@+id/textView6" />

    <EditText
        android:id="@+id/deviceDisplayNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/add_device_name_hint"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/deviceCodeEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/add_device_code_hint"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/deviceDisplayNameEditText"
        app:layout_constraintTop_toBottomOf="@+id/deviceDisplayNameEditText" />

    <EditText
        android:id="@+id/devicePasswordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/add_device_password_hint"
        android:inputType="numberPassword"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/deviceCodeEditText"
        app:layout_constraintTop_toBottomOf="@+id/deviceCodeEditText" />


    <Button
        android:id="@+id/addDeviceBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/add_device_add_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/devicePasswordEditText" />
</android.support.constraint.ConstraintLayout>